--- a/03-reviews/index.html
+++ b/03-reviews/index.html
@@ -28,12 +28,12 @@
             <img
               src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg"
               id="person-img"
-              alt="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg"
+              alt=
             />
           </div>
           <h4 id="author">sara jones</h4>
           <p id="job">ux designer</p>
-          <p class="info">
+          <p class="info" id="info">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat
             quibusdam alias eveniet optio, provident fugit. Magnam laudantium
             nemo a nisi.
@@ -46,7 +46,7 @@
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
-          <button class="btn random-btn">surprise</button>
+          <button class="btn random-btn">surprise me</button>
         </article>
       </div>
     </main>
