--- a/03-reviews/index.html
+++ b/03-reviews/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reviews || Starter</title>
-    <!-- normalize -->
-    <link rel="stylesheet" href="./normalize.css" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+    <script src="./app.js" differ></script>
+
     <!-- main css -->
     <link rel="stylesheet" href="./main.css" />
   </head>
@@ -26,10 +26,8 @@
         <article class="review">
           <div class="img-container">
             <img
-              src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg"
-              id="person-img"
-              alt=
-            />
+            src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg"
+            id="person-img" alt= />
           </div>
           <h4 id="author">sara jones</h4>
           <p id="job">ux designer</p>
@@ -39,10 +37,10 @@
             nemo a nisi.
           </p>
           <div class="button-container">
-            <button type="button" class="prev-btn">
+            <button type="button" class="prev-btn" title="button">
               <i class="fas fa-chevron-left"></i>
             </button>
-            <button type="button" class="prev-btn">
+            <button type="button" class="prev-btn" title="button">
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
