--- a/03-reviews/index.html
+++ b/03-reviews/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
-    <script src="./app.js" differ></script>
 
     <!-- main css -->
     <link rel="stylesheet" href="./main.css" />
@@ -40,7 +39,7 @@
             <button type="button" class="prev-btn" title="button">
               <i class="fas fa-chevron-left"></i>
             </button>
-            <button type="button" class="prev-btn" title="button">
+            <button type="button" class="next-btn" title="button">
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
@@ -50,3 +49,4 @@
     </main>
   </body>
 </html>
+<script src="./app.js" differ></script>
