--- a/04-navbar/index.html
+++ b/04-navbar/index.html
@@ -14,6 +14,45 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
+    <nav>
+      <div class="nav-center">
+        <div class="nav-header">
+          <h4 class="logo">Coding <span>Home</span></h4>
+          <button type="button" class="nav-toggle"><i class="fas fa-bars"></i></button>
+        </div>
+        <!-- links -->
+        <ul class="links">
+          <li>
+            <a href="#" id="teste">home</a>
+          </li>
+          <li>
+            <a href="#">about</a>
+          </li>
+        <li>
+          <a href="#">projects</a>
+        </li>
+        <li>
+          <a href="#">contacts</a>
+        </li>
+      </ul>
+      <!-- social media -->
+      <ul class="social-icons">
+        <li>
+          <a href="#" ><i class="fab fa-facebook"></i></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-instagram"></i></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-twitter"></i></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-linkedin"></i></i></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
     <script src="./app.js"></script>
   </body>
-</html>
+  </html>
+  
