--- a/08-menu/index.html
+++ b/08-menu/index.html
@@ -19,10 +19,10 @@
         <div class="underline"></div>
       </div>
       <div class="btn-container">
-        <button class="filter-btn" type="button" data-id="all">all</button>
+        <!-- <button class="filter-btn" type="button" data-id="all">all</button>
         <button class="filter-btn" type="button" data-id="breakfast">Breakfast</button>
         <button class="filter-btn" type="button" data-id="lunch">Lunch</button>
-        <button class="filter-btn" type="button" data-id="shakes">Shakes</button>
+        <button class="filter-btn" type="button" data-id="shakes">Shakes</button> -->
       </div>
       <div class="section-center">
         <!-- func map on app.js here -->
