--- a/10-scroll/index.html
+++ b/10-scroll/index.html
@@ -17,7 +17,7 @@
       <nav id="nav">
         <div class="nav-center">
           <div class="nav-header">
-            <img src="logo.svg" alt="logo">
+            <img src="logo.svg" class="logo" alt="logo">
             <button class="nav-toggle"><i class="fas fa-bars"></i></button>
           </div>
           <div class="links-container">
@@ -65,7 +65,7 @@
     </section>
     <!-- footer -->
     <footer class="section">
-      <p>copyright &copy; backroads trave tours company <span class="date">2020</span>. all rights reserverd</p>
+      <p>copyright &copy; backroads trave tours company <span class="date"></span>. all rights reserverd</p>
     </footer>
     <!-- back to top button -->
     <a href="#home" class="scroll-link top-link">
