--- a/09-video/index.html
+++ b/09-video/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video</title>
-    
+
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="preloader"><img src="./preloader.gif" alt=""></div>
+    <div class="preloader"><img src="./preloader.gif" alt="" /></div>
     <header>
-      <video src="./video.mp4" class="video-container" controls muted autoplay loop></video>
+      <video
+        src="./video.mp4"
+        class="video-container"
+        controls
+        muted
+        autoplay
+        loop
+      ></video>
       <h1>video project</h1>
       <button class="switch-btn">
         <span>play</span>
