--- a/10-scroll/index.html
+++ b/10-scroll/index.html
@@ -17,7 +17,7 @@
       <nav id="nav">
         <div class="nav-center">
           <div class="nav-header">
-            <img src="logo.svg" class="logo" alt="logo">
+            <img src="logo.svg" class="logo" alt="logo" />
             <button class="nav-toggle"><i class="fas fa-bars"></i></button>
           </div>
           <div class="links-container">
@@ -41,7 +41,11 @@
       <div class="banner">
         <div class="container">
           <h1>scroll project</h1>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque iusto soluta dolorem atque alias magni eius autem, voluptate accusamus repellendus.</p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
+            iusto soluta dolorem atque alias magni eius autem, voluptate
+            accusamus repellendus.
+          </p>
         </div>
       </div>
     </header>
@@ -65,13 +69,16 @@
     </section>
     <!-- footer -->
     <footer class="section">
-      <p>copyright &copy; backroads trave tours company <span class="date"></span>. all rights reserverd</p>
+      <p>
+        copyright &copy; backroads trave tours company
+        <span class="date"></span>. all rights reserverd
+      </p>
     </footer>
     <!-- back to top button -->
     <a href="#home" class="scroll-link top-link">
       <i class="fas fa-arrow-up"></i>
     </a>
-      <!-- javascript -->
+    <!-- javascript -->
     <script src="app.js"></script>
   </body>
 </html>
