html format changes

--- a/07-questions/index.html
+++ b/07-questions/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Q & A</title>
     <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <!-- extra fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet" />
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <section class="questions">
       <div class="title">
@@ -33,8 +29,9 @@
             </button>
           </div>
           <div class="question-text">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut, nesciunt voluptas. Quo odio deleniti quia.</p>
-          </article>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut, nesciunt voluptas. Quo odio deleniti quia.
+            </p>
+        </article>
         <!-- single question -->
         <article class="question">
           <div class="question-title">
@@ -45,8 +42,9 @@
             </button>
           </div>
           <div class="question-text">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut, nesciunt voluptas. Quo odio deleniti quia.</p>
-          </article>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut, nesciunt voluptas. Quo odio deleniti quia.
+            </p>
+        </article>
         <!-- single question -->
         <article class="question">
           <div class="question-title">
@@ -57,12 +55,14 @@
             </button>
           </div>
           <div class="question-text">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut, nesciunt voluptas. Quo odio deleniti quia.</p>
-          </article>
-        </div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut, nesciunt voluptas. Quo odio deleniti quia.
+            </p>
+        </article>
+      </div>
       </div>
     </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
+
 </html>
