--- a/08-menu/index.html
+++ b/08-menu/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starter</title>
     <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <section class="menu">
       <div class="title">
@@ -31,4 +30,5 @@
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
+
 </html>
