--- a/03-reviews/index.html
+++ b/03-reviews/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reviews || Starter</title>
     <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
 
     <!-- main css -->
     <link rel="stylesheet" href="./main.css" />
   </head>
+
   <body>
     <!-- https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg -->
     <main>
@@ -24,9 +23,8 @@
         </div>
         <article class="review">
           <div class="img-container">
-            <img
-            src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg"
-            id="person-img" alt= />
+            <img src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg" id="person-img"
+              alt= />
           </div>
           <h4 id="author">sara jones</h4>
           <p id="job">ux designer</p>
@@ -48,5 +46,6 @@
       </div>
     </main>
   </body>
+
 </html>
 <script src="./app.js" differ></script>
