--- a/04-navbar/index.html
+++ b/04-navbar/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navbar</title>
     <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <!-- main css -->
     <link rel="stylesheet" href="./main.css" />
   </head>
+
   <body>
     <nav>
       <div class="nav-center">
@@ -28,31 +27,31 @@
           <li>
             <a href="#">about</a>
           </li>
-        <li>
-          <a href="#">projects</a>
-        </li>
-        <li>
-          <a href="#">contacts</a>
-        </li>
-      </ul>
-      <!-- social media -->
-      <ul class="social-icons">
-        <li>
-          <a href="#" ><i class="fab fa-facebook"></i></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-instagram"></i></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-twitter"></i></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-linkedin"></i></i></a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+          <li>
+            <a href="#">projects</a>
+          </li>
+          <li>
+            <a href="#">contacts</a>
+          </li>
+        </ul>
+        <!-- social media -->
+        <ul class="social-icons">
+          <li>
+            <a href="#"><i class="fab fa-facebook"></i></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-instagram"></i></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-twitter"></i></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-linkedin"></i></i></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <script src="./app.js"></script>
   </body>
-  </html>
-  
+
+</html>
