--- a/06-modal/index.html
+++ b/06-modal/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modal</title>
     <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <header class="hero">
       <div class="banner">
@@ -22,10 +21,13 @@
     <div class="modal-overlay">
       <div class="modal-container">
         <h3>Modal content</h3>
-        <button class="close-btn"><div class="fas fa-times"></div></button>
+        <button class="close-btn">
+          <div class="fas fa-times"></div>
+        </button>
       </div>
     </div>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
+
 </html>
