--- a/12-countdown-timer/index.html
+++ b/12-countdown-timer/index.html
@@ -26,25 +26,25 @@
         <div class="deadline">
           <div class="deadline-format">
             <div>
-              <h4 class="days">34</h4>
+              <h4 class="days"></h4>
               <span>days</span>
             </div>
           </div>
           <div class="deadline-format">
             <div>
-              <h4 class="hours">34</h4>
+              <h4 class="hours"></h4>
               <span>hours</span>
             </div>
           </div>
           <div class="deadline-format">
             <div>
-              <h4 class="mins">34</h4>
+              <h4 class="mins"></h4>
               <span>mins</span>
             </div>
           </div>
           <div class="deadline-format">
             <div>
-              <h4 class="secs">34</h4>
+              <h4 class="secs"></h4>
               <span>secs</span>
             </div>
           </div>
