minor changes on index

--- a/12-countdown-timer/index.html
+++ b/12-countdown-timer/index.html
@@ -16,7 +16,7 @@
         <img src="./gift.jpeg" alt="">
       </article>
       <article class="gift-info">
-        <h3>old iphone giveaway</h3>
+        <h3>new iphone giveaway</h3>
         <h4 class="giveaway">
           giveaway ends on sunda, 24 April 2020, 8:00am
         </h4>
