--- a/13-lorem-ipsum/index.html
+++ b/13-lorem-ipsum/index.html
@@ -13,14 +13,12 @@
   <body>
     <section class="section-center">
       <h3>tired of boring of lorem ipsum?</h3>
-      <form action="lorem-form">
+      <form class="lorem-form">
         <label for="amount">paragraphs:</label>
-        <input type="number" name="amount" id="amount" placeholder="5">
+        <input type="number" id="amount" placeholder="5">
         <button type="submit" class="btn">generate</button>
       </form>
-      <article class="lorem-text">
-        <p></p>
-      </article>
+      <article class="lorem-text"></article>
     </section>
     <!-- javascript -->
     <script src="app.js"></script>
