feat: open modal

--- a/17-gallery/index.html
+++ b/17-gallery/index.html
@@ -27,7 +27,7 @@
       <img src="./images/city-5.jpeg" alt="city-photo" title="city-5" class="img" data-id="5">
     </section>
     <!-- modal -->
-    <div class="modal open">
+    <div class="modal">
       <!-- close btn -->
       <button class="close-btn">
         <i class="fas fa-times"></i>
