--- a/22-products/index.html
+++ b/22-products/index.html
@@ -16,20 +16,11 @@
         <h2>our products</h2>
         <div class="title-underline"></div>
       </div>
-      <div class="products-center">
-        <div class="products-container">
-          <!-- single product -->
-          <a href="product.html" class="single-product">
-            <img src="couch.jpg" alt="" class="single-product-img img">
-            <footer>
-              <h5 class="name">product title</h5>
-              <span class="price">$9.99</span>
-            </footer>
-          </a>
-        </div>
-      </div>
       <!-- products -->
-      <div class="products-center"></div>
+      <div class="products-center">
+        <!-- loading -->
+        
+      </div>
     </section>
     <script src="./app.js"></script>
   </body>
