--- a/22-products/product.html
+++ b/22-products/product.html
@@ -5,11 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Product</title>
+    <link rel="stylesheet" href="./styles.css">
   </head>
 
   <body>
-    <h1>single product</h1>
-    <a href="index.html">home page</a>
+    <a href="index.html" class="btn home-link">Back Home</a>
+    <div class="product">
+      <div class="product-wrapper">
+        <img src="./couch.jpg" alt="">
+        <div class="product-info">
+          <h3>title</h3>
+          <h5>company</h5>
+          <span>$9.999</span>
+          <div class="colors">
+            <span class="product-color"></span>
+            <span class="product-color" style="background-color: red;"></span>
+          </div>
+          <button class="btn">add to cart</button>
+        </div>
+      </div>
+    </div>
   </body>
 
 </html>
