--- a/22-products/product.html
+++ b/22-products/product.html
@@ -10,7 +10,7 @@
 
   <body>
     <a href="index.html" class="btn home-link">Back Home</a>
-    <div class="product">
+    <section class="product">
       <div class="product-wrapper">
         <img src="./couch.jpg" alt="">
         <div class="product-info">
@@ -21,10 +21,11 @@
             <span class="product-color"></span>
             <span class="product-color" style="background-color: red;"></span>
           </div>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro nihil tempore et. Sit, animi. Praesentium!</p>
           <button class="btn">add to cart</button>
         </div>
       </div>
-    </div>
+    </section>
+    <script src="./product.js"></script>
   </body>
-
 </html>
