--- a/23-random-user/index.html
+++ b/23-random-user/index.html
@@ -15,19 +15,20 @@
     <div class="block bcg-black"></div>
     <div class="block">
       <div class="container">
-        <img src="https://randomuser.me/api/portraits/men/75.jpg" alt="random user" class="user-img">
-        <p class="user-title">user title</p>
-        <div class="user-value">John Doe</div>
+        <img src="./utils/imgs/null-person.jpg" alt="random user" class="user-img">
+        <p class="user-title"></p>
+        <div class="user-value">Loading...</div>
         <div class="values-list">
-          <button class="icon active" data-label="name"><span class="far fa-user"></span></button>
+          <button class="icon" data-label="name"><span class="far fa-user"></span></button>
           <button class="icon" data-label="email"><span class="far fa-envelope-open"></span></button>
           <button class="icon" data-label="age"><span class="far fa-calendar-times"></span></button>
           <button class="icon" data-label="street"><span class="far fa-map"></span></button>
           <button class="icon" data-label="phone"><span class="fas fa-phone"></span></button>
           <button class="icon" data-label="password"><span class="fas fa-user-lock"></span></button>
         </div>
-        <button class="btn" type="button">random user</button>
       </div>
+      <button class="btn" type="button">random user</button>
+    </div>
     </div>
     <script type="module" src="./app.js"></script>
   </body>
