--- a/26-stripe-submenus/index.html
+++ b/26-stripe-submenus/index.html
@@ -53,6 +53,19 @@
         </article>
       </div>
     </section>
+    <!-- sidebar -->
+    <div class="sidebar-wrapper">
+      <aside class="sidebar">
+        <button class="close-btn">
+          <i class="fas fa-times"></i>
+        </button>
+        <div class="sidebar-links">
+          hello there
+        </div>
+      </aside>
+    </div>
+    <!-- links -->
+    <aside class="submenu"></aside>
     <script type="module" src="app.js"></script>
   </body>
 
