--- a/29-comfy-store/index.html
+++ b/29-comfy-store/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <!-- navbar -->
     <nav class="navbar">
       <div class="nav-center">
         <!-- !links -->
@@ -54,7 +55,7 @@
         <button class="sidebar-close">
           <i class="fas fa-times"></i>
         </button>
-        <!-- link -->
+        <!-- links -->
         <ul class="sidebar-links">
           <li>
             <a href="index.html" class="sidebar-link">
@@ -75,8 +76,8 @@
       </aside>
     </div>
     <!-- cart -->
-    <div class="cart-overlay show">
-      <div class="cart">
+    <div class="cart-overlay">
+      <aside class="cart">
         <button class="cart-close">
           <i class="fas fa-times"></i>
         </button>
@@ -106,16 +107,43 @@
           </div>
         </article>
         <!-- end of single item -->
-      </div>
-      <!-- footer -->
-      <footer>
-        <h3 class="cart-total text-slanted">
-          total : $12.99
-        </h3>
-        <button class="cart-checkout btn">checkout</button>
-      </footer>
+        <!-- footer -->
+        <footer>
+          <h3 class="cart-total text-slanted">
+            total : $12.99
+          </h3>
+          <button class="cart-checkout btn">checkout</button>
+        </footer>
       </aside>
     </div>
+    <!-- featured products -->
+    <section class="section featured">
+      <div class="title">
+        <h2><span>/</span>featured</h2>
+      </div>
+      <div class="featured-center section-center">
+        <h2 class="section-loading">loading...</h2>
+        <!-- single product -->
+        <article class="product">
+          <div class="product-container">
+            <img src="./images/main-bcg.jpeg" class="product-img img" alt="">
+            
+            <div class="product-icons">
+              <a href="product.html?id=1" class="product-icon">
+                <i class="fas fa-search"></i>
+              </a>
+              <button class="product-cart-btn product-icon"><i class="fas fa-shopping-cart"></i></button>
+            </div>
+          </div>
+          <footer>
+            <p class="product-name">name</p>
+            <h4 class="product-price">$9.99</h4>
+          </footer> 
+        </article>
+        <!-- end of single product -->
+      </div>
+      <a href="products.html" class="btn">all products</a>
+    </section>
     <script type="module" src="index.js"></script>
   </body>
 
