--- a/29-comfy-store/about.html
+++ b/29-comfy-store/about.html
@@ -82,6 +82,27 @@
         </header>
         <!-- cart items -->
         <div class="cart-items"></div>
+        <!-- single item -->
+        <article class="cart-item" data-id="">
+          <img src="./images/main-bcg.jpeg" class="cart-item-img" alt="name">
+          <!-- item info -->
+          <div>
+            <h4 class="cart-item-name">high-back bench</h4>
+            <p class="cart-item-price">19.99</p>
+            <button class="cart-item-remove-btn"></button>
+          </div>
+          <!-- amount toggle -->
+          <div>
+            <button class="cart-item-increase-btn">
+              <i class="fas fa-chevron-up"></i>
+            </button>
+            <p class="cart-item-amount"></p>
+            <button class="cart-item-decrease-btn">
+              <i class="fas fa-chevron-down"></i>
+            </button>
+          </div>
+        </article>
+        <!-- end of single item -->
         <!-- footer -->
         <footer>
           <h3 class="cart-total text-slanted">
@@ -89,26 +110,26 @@
           </h3>
           <button class="cart-checkout btn">checkout</button>
         </footer>
-        </aside>
+      </aside>
+    </div>
+    <!-- about -->
+    <section class="section section-center about-page">
+      <div class="title">
+        <h2><span>/</span> our history</h2>
       </div>
-      <!-- about -->
-      <section class="section section-center about-page">
-        <div class="title">
-          <h2><span>/</span> our history</h2>
-        </div>
-        <p class="about-text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat
-          accusantium sapiente tempora sed dolore esse deserunt eaque excepturi,
-          delectus error accusamus vel eligendi, omnis beatae. Quisquam, dicta.
-          Eos quod quisquam esse recusandae vitae neque dolore, obcaecati incidunt
-          sequi blanditiis est exercitationem molestiae delectus saepe odio
-          eligendi modi porro eaque in libero minus unde sapiente consectetur
-          architecto. Ullam rerum, nemo iste ex, eaque perspiciatis nisi, eum
-          totam velit saepe sed quos similique amet. Ex, voluptate accusamus
-          nesciunt totam vitae esse iste.
-        </p>
-      </section>
-      <script type="module" src="./src/pages/about.js"></script>
+      <p class="about-text">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat
+        accusantium sapiente tempora sed dolore esse deserunt eaque excepturi,
+        delectus error accusamus vel eligendi, omnis beatae. Quisquam, dicta.
+        Eos quod quisquam esse recusandae vitae neque dolore, obcaecati incidunt
+        sequi blanditiis est exercitationem molestiae delectus saepe odio
+        eligendi modi porro eaque in libero minus unde sapiente consectetur
+        architecto. Ullam rerum, nemo iste ex, eaque perspiciatis nisi, eum
+        totam velit saepe sed quos similique amet. Ex, voluptate accusamus
+        nesciunt totam vitae esse iste.
+      </p>
+    </section>
+    <script type="module" src="./src/pages/about.js"></script>
   </body>
 
 </html>
