--- a/29-comfy-store/products.html
+++ b/29-comfy-store/products.html
@@ -115,11 +115,32 @@
     <!-- products -->
     <section class="products">
       <!-- filters -->
-      <div class="filters"></div>
+      <div class="filters">
+        <div class="filters-container">
+          <!-- search -->
+          <form class="input-form">
+            <input type="text" class="search-input" placeholder="Search...">
+          </form>
+          <!-- categories -->
+          <h4>Company</h4>
+          <article class="companies">
+            <button class="company-btn">all</button>
+            <button class="company-btn">ikea</button>
+          </article>
+          <!-- price -->
+          <h4>Price</h4>
+          <form class="price-form">
+            <input type="range" class="price-filter" min="0" value="50" max="100">
+          </form>
+        </div>
+      </div>
       <!-- products -->
       <div class="products-container"></div>
     </section>
     <!-- page loading -->
+    <div class="page-loading">
+      <h2>Loading...</h2>
+    </div>
     <script type="module" src="./src/pages/products.js"></script>
   </body>
 
