--- a/29-comfy-store/products.html
+++ b/29-comfy-store/products.html
@@ -81,28 +81,29 @@
           <h3 class="text-slanted">your bag</h3>
         </header>
         <!-- cart items -->
-        <div class="cart-items"></div>
-        <!-- single item -->
-        <article class="cart-item" data-id="">
-          <img src="./images/main-bcg.jpeg" class="cart-item-img" alt="name">
-          <!-- item info -->
-          <div>
-            <h4 class="cart-item-name">high-back bench</h4>
-            <p class="cart-item-price">19.99</p>
-            <button class="cart-item-remove-btn"></button>
-          </div>
-          <!-- amount toggle -->
-          <div>
-            <button class="cart-item-increase-btn">
-              <i class="fas fa-chevron-up"></i>
-            </button>
-            <p class="cart-item-amount"></p>
-            <button class="cart-item-decrease-btn">
-              <i class="fas fa-chevron-down"></i>
-            </button>
-          </div>
-        </article>
-        <!-- end of single item -->
+        <div class="cart-items">
+          <!-- single item -->
+          <article class="cart-item" data-id="">
+            <img src="./images/main-bcg.jpeg" class="cart-item-img" alt="name">
+            <!-- item info -->
+            <div>
+              <h4 class="cart-item-name">high-back bench</h4>
+              <p class="cart-item-price">19.99</p>
+              <button class="cart-item-remove-btn"></button>
+            </div>
+            <!-- amount toggle -->
+            <div>
+              <button class="cart-item-increase-btn">
+                <i class="fas fa-chevron-up"></i>
+              </button>
+              <p class="cart-item-amount"></p>
+              <button class="cart-item-decrease-btn">
+                <i class="fas fa-chevron-down"></i>
+              </button>
+            </div>
+          </article>
+          <!-- end of single item -->
+        </div>
         <!-- footer -->
         <footer>
           <h3 class="cart-total text-slanted">
@@ -132,6 +133,7 @@
           <form class="price-form">
             <input type="range" class="price-filter" min="0" value="50" max="100">
           </form>
+          <p class="price-value"></p>
         </div>
       </div>
       <!-- products -->
