--- a/29-comfy-store/about.html
+++ b/29-comfy-store/about.html
@@ -83,25 +83,25 @@
         <!-- cart items -->
         <div class="cart-items">
           <!-- single item -->
-          <article class="cart-item" data-id="">
-            <img src="./images/main-bcg.jpeg" class="cart-item-img" alt="name">
-            <!-- item info -->
-            <div>
-              <h4 class="cart-item-name">high-back bench</h4>
-              <p class="cart-item-price">19.99</p>
-              <button class="cart-item-remove-btn"></button>
-            </div>
-            <!-- amount toggle -->
-            <div>
-              <button class="cart-item-increase-btn">
-                <i class="fas fa-chevron-up"></i>
-              </button>
-              <p class="cart-item-amount"></p>
-              <button class="cart-item-decrease-btn">
-                <i class="fas fa-chevron-down"></i>
-              </button>
-            </div>
-          </article>
+          <!-- <article class="cart-item" data-id="">
+                    <img src="./images/main-bcg.jpeg" class="cart-item-img" alt="name"> -->
+          <!-- item info -->
+          <!-- <div>
+                      <h4 class="cart-item-name">high-back bench</h4>
+                      <p class="cart-item-price">19.99</p>
+                      <button class="cart-item-remove-btn"></button>
+                    </div> -->
+          <!-- amount toggle -->
+          <!-- <div>
+                      <button class="cart-item-increase-btn">
+                        <i class="fas fa-chevron-up"></i>
+                      </button>
+                      <p class="cart-item-amount"></p>
+                      <button class="cart-item-decrease-btn">
+                        <i class="fas fa-chevron-down"></i>
+                      </button>
+                    </div>
+                  </article> -->
           <!-- end of single item -->
         </div>
         <!-- footer -->
