--- a/29-comfy-store/products.html
+++ b/29-comfy-store/products.html
@@ -83,16 +83,16 @@
         <!-- cart items -->
         <div class="cart-items">
           <!-- single item -->
-          <article class="cart-item" data-id="">
-            <img src="./images/main-bcg.jpeg" class="cart-item-img" alt="name">
+          <!-- <article class="cart-item" data-id="">
+            <img src="./images/main-bcg.jpeg" class="cart-item-img" alt="name"> -->
             <!-- item info -->
-            <div>
+            <!-- <div>
               <h4 class="cart-item-name">high-back bench</h4>
               <p class="cart-item-price">19.99</p>
               <button class="cart-item-remove-btn"></button>
-            </div>
+            </div> -->
             <!-- amount toggle -->
-            <div>
+            <!-- <div>
               <button class="cart-item-increase-btn">
                 <i class="fas fa-chevron-up"></i>
               </button>
@@ -101,7 +101,7 @@
                 <i class="fas fa-chevron-down"></i>
               </button>
             </div>
-          </article>
+          </article> -->
           <!-- end of single item -->
         </div>
         <!-- footer -->
